--- a/trainingethers/package.json
+++ b/trainingethers/package.json
@@ -9,6 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.13",
+    "ethers": "^5.7.2",
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
